Preparativos para o README

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
 
     <footer>
       <div class="flex-container footer">
-        <p>&copy; 2022 CSS Flexbox</p>
+        <p>&copy; 2022 CSS Flexbox-Dio</p>
         <p>Desenvolvido por: Jonathan Maia</p>
-        <p>Orientadora: Karen</p>
+        <p>Orientadora: Karen Santos</p>
       </div>
     </footer>
   </body>
